[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.0213623, 0.033699, 0.21875, 1, 0.0742188, 0.0649414, 0.0649414, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 0.0966184, 0 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SpaceDustCargoLabel" type="Label" parent="."]
margin_right = 126.0
margin_bottom = 14.0
text = "Space Dust Cargo: 0"

[node name="SDCFullLabel" type="Label" parent="SpaceDustCargoLabel"]
visible = false
margin_left = 168.0
margin_top = 1.0
margin_right = 332.0
margin_bottom = 15.0
text = "FULL -> PROCEED TO EXIT"

[node name="FuelLabel" type="Label" parent="."]
margin_top = 15.0
margin_right = 55.0
margin_bottom = 29.0
text = "Fuel:100"

[node name="VelocityLabel" type="Label" parent="."]
margin_top = 29.0
margin_right = 67.0
margin_bottom = 43.0
text = "Velocity: 0"

[node name="HarvestLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="PlayerMoneyLabel" type="Label" parent="."]
margin_top = 44.0
margin_right = 51.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 10 )
text = "Money: "

[node name="PlayerDebtLabel" type="Label" parent="."]
margin_top = 59.0
margin_right = 40.0
margin_bottom = 73.0
text = "Debt: 100000"

[node name="ExitAreaLabel" type="Label" parent="."]
visible = false
margin_left = 487.0
margin_top = 759.0
margin_right = 527.0
margin_bottom = 773.0
text = "EXIT THIS WAY!"

[node name="SummaryLabel" type="Label" parent="."]
visible = false
margin_left = 38.0
margin_top = 211.0
margin_right = 201.0
margin_bottom = 225.0
text = "Summary of your harvest:"

[node name="SummaryBG" type="TextureRect" parent="SummaryLabel"]
show_behind_parent = true
margin_left = -11.0
margin_top = -10.0
margin_right = 903.0
margin_bottom = 355.0
texture = SubResource( 2 )
expand = true

[node name="SDLabel" type="Label" parent="SummaryLabel"]
margin_left = 71.0
margin_top = 45.0
margin_right = 195.0
margin_bottom = 59.0
text = "Special Space Dust:"

[node name="SDRateLabel" type="Label" parent="SummaryLabel/SDLabel"]
margin_left = 231.0
margin_top = -1.0
margin_right = 271.0
margin_bottom = 13.0
text = "x 40"

[node name="SDTotal" type="Label" parent="SummaryLabel/SDLabel"]
margin_left = 330.0
margin_right = 374.0
margin_bottom = 14.0
text = "= 1000"

[node name="CollectedLabel" type="Label" parent="SummaryLabel/SDLabel"]
margin_left = 125.0
margin_top = -29.0
margin_right = 188.0
margin_bottom = -15.0
text = "Collected"

[node name="SDRateLabel2" type="Label" parent="SummaryLabel/SDLabel"]
margin_left = 219.0
margin_top = -30.0
margin_right = 274.0
margin_bottom = -15.0
text = "Worth"
align = 1

[node name="SDEarnedTotal" type="Label" parent="SummaryLabel/SDLabel"]
margin_left = 291.0
margin_top = -29.0
margin_right = 406.0
margin_bottom = 2.0
text = "Earned
"
align = 1

[node name="FuelUsedLabel" type="Label" parent="SummaryLabel"]
margin_left = 124.0
margin_top = 108.0
margin_right = 192.0
margin_bottom = 122.0
text = "Fuel Used:"

[node name="FuelCostLabel" type="Label" parent="SummaryLabel/FuelUsedLabel"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 14.0
text = "x 2"

[node name="FuelCostLabel2" type="Label" parent="SummaryLabel/FuelUsedLabel"]
margin_left = 178.0
margin_top = -21.0
margin_right = 218.0
margin_bottom = -7.0
text = "cost per unit"

[node name="FuelCostLabel3" type="Label" parent="SummaryLabel/FuelUsedLabel"]
margin_left = 275.0
margin_top = -22.0
margin_right = 356.0
margin_bottom = -8.0
text = "Refuel cost"

[node name="FuelTotalLabel" type="Label" parent="SummaryLabel/FuelUsedLabel"]
margin_left = 276.0
margin_right = 320.0
margin_bottom = 14.0
text = "= 1000"

[node name="FuelTotalLabel2" type="Label" parent="SummaryLabel/FuelUsedLabel"]
margin_left = 72.0
margin_top = -22.0
margin_right = 116.0
margin_bottom = -8.0
text = "Used"

[node name="DebtLabel" type="Label" parent="SummaryLabel"]
margin_left = 87.0
margin_top = 169.0
margin_right = 193.0
margin_bottom = 183.0
text = "Debt Remaining:"

[node name="MinDebtPaymentLabel" type="Label" parent="SummaryLabel/DebtLabel"]
margin_left = 217.0
margin_right = 257.0
margin_bottom = 14.0
text = "- 100"

[node name="MinDebtPaymentLabel2" type="Label" parent="SummaryLabel/DebtLabel"]
margin_left = 109.0
margin_top = -17.0
margin_right = 149.0
margin_bottom = -3.0
text = "Debt"

[node name="MinDebtPaymentLabel3" type="Label" parent="SummaryLabel/DebtLabel"]
margin_left = 217.0
margin_top = -17.0
margin_right = 273.0
margin_bottom = -3.0
rect_pivot_offset = Vector2( -24, 48 )
text = "Payment"

[node name="MinDebtPaymentLabel4" type="Label" parent="SummaryLabel/DebtLabel"]
margin_left = 312.0
margin_top = -18.0
margin_right = 368.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( -24, 48 )
text = "New Debt Total"

[node name="RemainingDebtLabel" type="Label" parent="SummaryLabel/DebtLabel"]
margin_left = 312.0
margin_right = 356.0
margin_bottom = 14.0
text = "= 8000"

[node name="MoneyEarnedLabel" type="Label" parent="SummaryLabel"]
margin_left = 98.0
margin_top = 234.0
margin_right = 192.0
margin_bottom = 248.0
text = "Money Earned:"

[node name="FeesLabel" type="Label" parent="SummaryLabel/MoneyEarnedLabel"]
margin_left = 206.0
margin_right = 246.0
margin_bottom = 14.0
text = "- 100"

[node name="FeesLabel2" type="Label" parent="SummaryLabel/MoneyEarnedLabel"]
margin_left = 206.0
margin_top = -17.0
margin_right = 246.0
margin_bottom = -3.0
text = "Fees"

[node name="FeesLabel4" type="Label" parent="SummaryLabel/MoneyEarnedLabel"]
margin_left = 301.0
margin_top = -16.0
margin_right = 341.0
margin_bottom = -2.0
text = "Earned Total"

[node name="FeesLabel3" type="Label" parent="SummaryLabel/MoneyEarnedLabel"]
margin_left = 98.0
margin_top = -17.0
margin_right = 138.0
margin_bottom = -3.0
text = "Earned"

[node name="TotalMoneyEarnedLabel" type="Label" parent="SummaryLabel/MoneyEarnedLabel"]
margin_left = 302.0
margin_right = 342.0
margin_bottom = 14.0
text = "= 100"

[node name="ConfimButton" type="Button" parent="SummaryLabel"]
margin_left = 397.0
margin_top = 313.0
margin_right = 552.0
margin_bottom = 333.0
text = "Confirm"

[node name="UpgradeLabel" type="Label" parent="."]
visible = false
margin_left = 38.0
margin_top = 411.0
margin_right = 126.0
margin_bottom = 425.0
text = "Upgrade ship:"

[node name="UpgradeBG" type="TextureRect" parent="UpgradeLabel"]
show_behind_parent = true
margin_left = -8.0
margin_top = -10.0
margin_right = 571.0
margin_bottom = 177.0
texture = SubResource( 2 )
expand = true

[node name="ThrustLabel" type="Label" parent="UpgradeLabel"]
margin_left = 8.0
margin_top = 20.0
margin_right = 134.0
margin_bottom = 34.0
text = "Improve Thrust 500"

[node name="PlayerMoneyLabel" type="Label" parent="UpgradeLabel"]
margin_left = 300.0
margin_top = -5.0
margin_right = 340.0
margin_bottom = 9.0
text = "Money: "

[node name="UpgradeConfirmButton" type="Button" parent="UpgradeLabel"]
margin_left = 212.0
margin_top = 137.0
margin_right = 328.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( -429, -360 )
text = "Confirm"

[node name="BuyThrustButton" type="Button" parent="UpgradeLabel"]
margin_left = 161.0
margin_top = 20.0
margin_right = 272.0
margin_bottom = 40.0
text = "Purchase"

[node name="StartMenuLabel" type="Label" parent="."]
margin_left = 462.0
margin_top = 403.0
margin_right = 581.0
margin_bottom = 417.0
text = "Click START to play"

[node name="StartMenuBG" type="TextureRect" parent="StartMenuLabel"]
show_behind_parent = true
anchor_left = -3.874
anchor_top = -28.786
anchor_right = -3.874
anchor_bottom = -28.786
margin_left = -16.994
margin_top = -17.996
margin_right = 1038.01
margin_bottom = 815.004
texture = SubResource( 2 )
expand = true

[node name="GameStartButton" type="Button" parent="StartMenuLabel"]
margin_left = -33.0
margin_top = 28.0
margin_right = 160.0
margin_bottom = 48.0
text = "START"

[node name="IntroLabel" type="Label" parent="StartMenuLabel"]
margin_left = -153.0
margin_top = -306.0
margin_right = 52.0
margin_bottom = -292.0
text = "Welcome to Space Harvest Corp"

[node name="HarvestRuleLabel" type="Label" parent="StartMenuLabel/IntroLabel"]
margin_left = 18.0
margin_top = 31.0
margin_right = 196.0
margin_bottom = 62.0
text = "-Harvest Special Space Dust
"

[node name="CargoRuleLabel" type="Label" parent="StartMenuLabel/IntroLabel"]
margin_left = 20.0
margin_top = 62.0
margin_right = 198.0
margin_bottom = 93.0
text = "-Return to the exit area when you have collected Special Space Dust
"

[node name="EnemyRuleLabel" type="Label" parent="StartMenuLabel/IntroLabel"]
margin_left = 22.0
margin_top = 98.0
margin_right = 456.0
margin_bottom = 129.0
text = "-Avoid enemies, they will cost you Special Space Dust
"

[node name="MoneyRuleLabel" type="Label" parent="StartMenuLabel/IntroLabel"]
margin_left = 21.0
margin_top = 132.0
margin_right = 455.0
margin_bottom = 163.0
text = "-Special Space Dust returned to the exit area earns cash
"

[node name="WinRuleLabel" type="Label" parent="StartMenuLabel/IntroLabel"]
margin_left = 21.0
margin_top = 163.0
margin_right = 455.0
margin_bottom = 194.0
text = "-Pay off debt to win
"

[connection signal="pressed" from="SummaryLabel/ConfimButton" to="." method="_on_ConfimButton_pressed"]
[connection signal="pressed" from="UpgradeLabel/UpgradeConfirmButton" to="." method="_on_UpgradeConfirmButton_pressed"]
[connection signal="pressed" from="UpgradeLabel/BuyThrustButton" to="." method="_on_BuyThrustButton_pressed"]
[connection signal="pressed" from="StartMenuLabel/GameStartButton" to="." method="_on_GameStartButton_pressed"]
